# REVELATION

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/revelation-cli/: Cargo.toml  build.rs
crates/revelation-cli/src/: main.rs
crates/revelation-core/: Cargo.toml  build.rs
crates/revelation-core/src/: export.rs  hashing.rs  lib.rs  report.rs  rules_update.rs  scan.rs  yara_engine.rs
crates/revelation-core/src/analysis/: api_classifier.rs  api_extractor.rs  api_score.rs  mod.rs
crates/revelation-core/src/pe/: imports.rs
crates/revelation-core/src/ui/: results.rs
crates/revelation-gui/: Cargo.toml  build.rs
crates/revelation-gui/src/: main.rs
crates/revelation-gui/src/ui/: results.rs
crates/revelation-logs/: Cargo.toml
crates/revelation-logs/src/: evtx_reader.rs  lib.rs  pipeline.rs  sigma_engine.rs  timeline.rs  windows_channels.rs
rules/compiled/: community_combined.yar  elastic_combined.yar
rules/compiled/compiled/: community_combined.yar  elastic_combined.yar
scripts/: make_dist.ps1
