[package]
name = "revelation"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"

revelation-core = { path = "../revelation-core" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
