[package]
name = "revelation-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
sha2 = "0.10"
hex = "0.4"
regex = "1"
git2 = "0.19"
csv = "1"
time = { version = "0.3", features = ["formatting"] }
yara = "0.30"
goblin = "0.8"
