[package]
name = "revelation-gui"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1"
revelation-core = { path = "../revelation-core" }
revelation-logs = { path = "../revelation-logs" }

eframe = "0.27"
egui = "0.27"
rfd = "0.14"
serde_json = "1"
csv = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
